--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-  <header>
+  <header id="header-nav">
     <img src="/img/claire_headshot.jpg" alt="A picture of a woman smiling" />
     <h1>Mary Claire Elliott</h1>
     <nav>
@@ -40,7 +40,7 @@
     </section>
   </main>
   <footer>
-    <nav>
+    <nav id="footer-nav">
       <ul>
         <li><a href="#">GitHub</a></li>
         <li><a href="#">Twitter</a></li>
