--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-  <header>
+  <header id="header-nav">
     <img src="/img/claire_headshot.jpg" alt="A picture of a woman smiling" />
     <h1>Mary Claire Elliott</h1>
     <nav>
@@ -19,51 +19,51 @@
       </ul>
     </nav>
   </header>
-  <main>
-    <section>
+  <main id="portfolio-main">
+    <section class="spotlight">
       <h2>React Against Humanity</h2>
       <img src="/img/forest_shark.jpg" alt="A picture of a shark swimming through a forest of trees" />
       <p>My attempt to recreate Cards Against Humanity using React and a Google Firestore real-time database. <a href="https://github.com/spitsfire/adadachi-base">Find the GitHub repo here</a>.</p>
-      <ul>
+      <ul class="project-tags">
         <li>React</li>
         <li>Firestore</li>
         <li>CSS</li>
         <li>Node</li>
       </ul>
     </section>
-    <section>
+    <section class="spotlight">
       <h2>Socket.io Chatroom</h2>
       <img src="/img/forest_shark.jpg" alt="A picture of a shark swimming through a forest of trees" />
       <p>A useable chatroom to share messages in real-time using Express and Socket.io. <a href="https://github.com/spitsfire/adadachi-base">Find the GitHub repo here</a>.</p>
-      <ul>
+      <ul class="project-tags">
         <li>Express</li>
         <li>Socket.io</li>
         <li>CSS</li>
         <li>Node</li>
       </ul>
     </section>
-    <section>
+    <section class="spotlight">
       <h2>Weather API</h2>
       <img src="/img/forest_shark.jpg" alt="A picture of a shark swimming through a forest of trees" />
       <p>Using the Open Weather, this Angular project displays several major cities' weather data from a third-party API. <a href="https://github.com/spitsfire/adadachi-base">Find the GitHub repo here</a>.</p>
-      <ul>
+      <ul class="project-tags">
         <li>Express</li>
         <li>Angular</li>
         <li>CSS</li>
         <li>Node</li>
       </ul>
     </section>
-    <section>
+    <section class="spotlight">
       <h2>Adadachi</h2>
       <img src="/img/forest_shark.jpg" alt="A picture of a shark swimming through a forest of trees" />
       <p>A terminal game similar to Tamagotchi with ASCII art. <a href="https://github.com/spitsfire/adadachi-base">Find the GitHub repo here</a>.</p>
-      <ul>
+      <ul class="project-tags">
         <li>Python</li>
       </ul>
     </section>
   </main>
   <footer>
-    <nav>
+    <nav id="footer-nav">
       <ul>
         <li><a href="#">GitHub</a></li>
         <li><a href="#">Twitter</a></li>
