--- a/about.html
+++ b/about.html
@@ -8,6 +8,46 @@
   <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-  
+  <header>
+    <img src="/img/claire_headshot.jpg" alt="A picture of a woman smiling" />
+    <h1>Mary Claire Elliott</h1>
+    <nav>
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/portfolio.html">Portfolio</a></li>
+        <li><a href="/about.html">About Me</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h2>What I Like</h2>
+      <ul>
+        <li>React</li>
+        <li>Firestore</li>
+        <li>CSS</li>
+        <li>Node</li>
+      </ul>
+    </section>
+    <section>
+      <h2>What I've Done</h2>
+      <ul>
+        <li>Express</li>
+        <li>Socket.io</li>
+        <li>CSS</li>
+        <li>Node</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <nav id="footer-nav">
+      <ul>
+        <li><a href="#">GitHub</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">Email</a></li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 </html>
